# mdbook-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
tests/: cli.rs  expected_book.json  expected_chapters.json  expected_markdown.json
tests/example_book/: book.toml
tests/example_book/src/: SUMMARY.md
tests/example_book/src/subdir1/: README.md
tests/example_book/src/subdir2/: chapter_2.md  index.md
tests/example_book/src/subdir2/subdir3/: index.md
