[package]
name = "mdbook-api"
version = "0.1.0"
authors = ["Rachel Brindle <you@subluminal.net>"]
edition = "2018"

[dependencies]
mdbook = "0.2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[dev-dependencies]
tempdir = "0.3.5"