[package]
name = "mdbook-api"
version = "0.4.1"
authors = ["Rachel Brindle <you@subluminal.net>"]
edition = "2018"
license = "MIT"
description = "mdBook backend to generate static json api"

[dependencies]
mdbook = "^0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.1"
failure_derive = "0.1.1"

[dev-dependencies]
tempdir = "0.3.5"
